[package]
name = "pomodorino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "5.0"
native_db = "0.6.0"
native_model = "0.4.14"
serde = { version = "1.0", features = ["derive"] } # for native_db
tokio = { version = "1", features = ["rt", "macros", "time"] }
